k8s/overlays/nerc-shift-1/stf/karma-dashboard/karma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karma-dashboard
  namespace: service-telemetry
spec:
  selector:
    matchLabels:
      app: karma-dashboard
  replicas: 1
  template:
    metadata:
      labels:
        app: karma-dashboard
    spec:
      containers:
        - name: karma-dashboard
          image: ghcr.io/prymitive/karma:latest
          ports:
            - containerPort: 8080
